--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "EventPointer: An effective identification of alternative splicing events using junction arrays and RNA-Seq data"
-author: "Juan P. Romero & Juan A. Ferrer-Bonsoms"
+author: "Juan P. Romero, Juan A. Ferrer-Bonsoms & Angel Rubio"
 date: "`r BiocStyle::doc_date()`"
 abstract: >
   *EventPointer* is an R package to identify alternative splicing events that involve either simple (case-control experiment) or complex experimental designs such as time course experiments and studies including paired-samples. The algorithm can be used to analyze data from either junction arrays (Affymetrix Arrays) or sequencing data (RNA-Seq). 
