jaf:buf in vignette

--- a/vignettes/EventPointer.Rmd
+++ b/vignettes/EventPointer.Rmd
@@ -470,8 +470,9 @@ PathFiles<-system.file("extdata",package="EventPointer")
 inputFile <- paste(PathFiles,"/gencode.v24.ann_2genes.gtf",sep="")
 Transcriptome <- "Gencode24_2genes"
 Pathtxt <- tempdir()
+```
 
-
+```{r GTFfGTF_2, eval=TRUE, warning=FALSE, collapse=TRUE}
 # Run the function
 
 EventXtrans <- EventDetection_transcriptome(inputFile = inputFile,
